# ChangeLog for dev-lisp/gcl-cvs
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/gcl-cvs/ChangeLog,v 1.5 2006/11/29 15:44:17 opfer Exp $

  29 Nov 2006; Christian Faulhammer <opfer@gentoo.org> gcl-cvs-2.7.0.ebuild:
  moved tcltk USE flag over to separate tk and tcl flags, see bug #17808

  13 Feb 2006; Matthew Kennedy <mkennedy@gentoo.org> gcl-cvs-2.7.0.ebuild:
  Modular X dependencies.

  13 Dec 2005; Matthew Kennedy <mkennedy@gentoo.org> gcl-cvs-2.7.0.ebuild:
  Savannah CVS changes; Resolves Bug #115327.

  22 Aug 2005; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog:
  Localize sandbox disable.

*gcl-cvs-2.7.0 (09 Dec 2004)

  09 Dec 2004; Matthew Kennedy <mkennedy@gentoo.org> +metadata.xml,
  +files/gcl, +files/gcl.notcltk, +files/gcl.sh, +gcl-cvs-2.7.0.ebuild:
  Initial port. Ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>
