@@ -1,6 +1,9 @@
 # ChangeLog for dev-lisp/gcl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/gcl/ChangeLog,v 1.43 2007/02/03 17:55:59 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/gcl/ChangeLog,v 1.44 2007/07/02 15:03:30 peper Exp $
+
+  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> gcl-2.6.7-r2.ebuild:
+  (QA) RESTRICT clean up.
 
   03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> gcl-2.6.7-r2.ebuild:
   Use mirror://debian/ where applicable, or use mirror://gentoo/ if the file
