@@ -1,6 +1,9 @@
 # ChangeLog for dev-lisp/gcl-cvs
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/gcl-cvs/ChangeLog,v 1.5 2006/11/29 15:44:17 opfer Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/gcl-cvs/ChangeLog,v 1.6 2007/07/02 15:04:13 peper Exp $
+
+  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> gcl-cvs-2.7.0.ebuild:
+  (QA) RESTRICT clean up.
 
   29 Nov 2006; Christian Faulhammer <opfer@gentoo.org> gcl-cvs-2.7.0.ebuild:
   moved tcltk USE flag over to separate tk and tcl flags, see bug #17808
